--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-google-oauth2": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
