--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://Admin:Admin%402024@blogger.dh4ac.mongodb.net/
-JWT_EXPIRES_IN=1d
+JWT_SECRET=1234567890;
+JWT_EXPIRES_IN=1d;
+GAUTH_CLIENT_ID="528300106755-aicjfir6ajh29822a2telnoavfd2du8b.apps.googleusercontent.com"
