--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "axios": "^1.7.8",
+    "firebase": "^11.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-google-oauth2": "^1.0.7"
