--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
-
+PORT=5000
+MONGO_URI=mongodb+srv://Admin:Admin%402024@blogger.dh4ac.mongodb.net/
+JWT_SECRET=123456789
+JWT_EXPIRES_IN=1h;
+GAUTH_CLIENT_ID="528300106755-aicjfir6ajh29822a2telnoavfd2du8b.apps.googleusercontent.com"
+FIREBASE_PROJECT_ID=fir-43e31
